[gd_scene load_steps=12 format=3 uid="uid://cu8gtdofpky2o"]

[ext_resource type="Script" path="res://Scripts/Popups/Options/WorkingDirText.gd" id="1_5edal"]
[ext_resource type="Script" path="res://Scripts/Popups/Options/WorkingDirChooser.gd" id="1_qxvmc"]
[ext_resource type="Script" path="res://Scripts/Popups/Options/OptionsDialog.gd" id="1_vxc5e"]
[ext_resource type="Script" path="res://Scripts/Popups/Options/BuildDirChooser.gd" id="2_fywm8"]
[ext_resource type="Script" path="res://Scripts/Popups/Options/BuildDirText.gd" id="2_y6cg2"]
[ext_resource type="Script" path="res://Scripts/Popups/Options/ToolsDirText.gd" id="3_4eq2m"]
[ext_resource type="Script" path="res://Scripts/Popups/Options/ToolsDirChooser.gd" id="3_vr4cd"]
[ext_resource type="Script" path="res://Scripts/Popups/Options/AddiDirText.gd" id="4_2sogh"]
[ext_resource type="Script" path="res://Scripts/Popups/Options/AddiDirChooser.gd" id="4_d742l"]
[ext_resource type="Script" path="res://Scripts/Popups/Options/ValidityCheck.cs" id="5_ht0et"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_454na"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[node name="Options" type="ConfirmationDialog"]
title = "Options"
size = Vector2i(500, 320)
min_size = Vector2i(500, 320)
script = ExtResource("1_vxc5e")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -660.0
offset_bottom = -377.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
offset_right = 484.0
offset_bottom = 136.0
columns = 3

[node name="WorkingDirLabel" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
offset_top = 2.0
offset_right = 232.0
offset_bottom = 28.0
text = "Working directory:"

[node name="WorkingDirText" type="LineEdit" parent="VBoxContainer/GridContainer"]
layout_mode = 2
offset_left = 236.0
offset_right = 458.0
offset_bottom = 31.0
size_flags_horizontal = 3
tooltip_text = "Path to the working directory"
placeholder_text = "Path/to/the/working/directory"
script = ExtResource("1_5edal")

[node name="WorkingDirChoose" type="Button" parent="VBoxContainer/GridContainer"]
layout_mode = 2
offset_left = 462.0
offset_right = 484.0
offset_bottom = 31.0
text = "..."

[node name="BuildDirLabel" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
offset_top = 37.0
offset_right = 232.0
offset_bottom = 63.0
text = "Build directory:"

[node name="BuildDirText" type="LineEdit" parent="VBoxContainer/GridContainer"]
layout_mode = 2
offset_left = 236.0
offset_top = 35.0
offset_right = 458.0
offset_bottom = 66.0
tooltip_text = "Path to the titan quest custommaps folder"
placeholder_text = "Path/to/the/titan/quest/custommaps/folder"
script = ExtResource("2_y6cg2")

[node name="BuildDirChoose" type="Button" parent="VBoxContainer/GridContainer"]
layout_mode = 2
offset_left = 462.0
offset_top = 35.0
offset_right = 484.0
offset_bottom = 66.0
text = "..."

[node name="ToolsDirLabel" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
offset_top = 72.0
offset_right = 232.0
offset_bottom = 98.0
text = "Tools directory:"

[node name="ToolsDirText" type="LineEdit" parent="VBoxContainer/GridContainer"]
layout_mode = 2
offset_left = 236.0
offset_top = 70.0
offset_right = 458.0
offset_bottom = 101.0
tooltip_text = "Path to the folder where you installed the Titan Quest game"
placeholder_text = "Path/to/the/folder/containing/titan/quest/game"
script = ExtResource("3_4eq2m")

[node name="ToolsDirChoose" type="Button" parent="VBoxContainer/GridContainer"]
layout_mode = 2
offset_left = 462.0
offset_top = 70.0
offset_right = 484.0
offset_bottom = 101.0
text = "..."

[node name="AddiDirLabel" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
offset_top = 107.0
offset_right = 232.0
offset_bottom = 133.0
text = "Additional browse directories:"

[node name="AddiDirText" type="LineEdit" parent="VBoxContainer/GridContainer"]
layout_mode = 2
offset_left = 236.0
offset_top = 105.0
offset_right = 458.0
offset_bottom = 136.0
editable = false
script = ExtResource("4_2sogh")

[node name="AddiDirChoose" type="Button" parent="VBoxContainer/GridContainer"]
layout_mode = 2
offset_left = 462.0
offset_top = 105.0
offset_right = 484.0
offset_bottom = 136.0
disabled = true
text = "..."

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
offset_top = 140.0
offset_right = 484.0
offset_bottom = 228.0
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_454na")
bbcode_enabled = true
text = "[color=green]Working dir is valid[/color]
[color=green]Build dir is valid[/color]
[color=green]Tools dir is valid[/color]"
scroll_active = false
script = ExtResource("5_ht0et")

[node name="ExportStatistics" type="CheckBox" parent="VBoxContainer"]
layout_mode = 2
offset_top = 232.0
offset_right = 484.0
offset_bottom = 263.0
button_pressed = true
text = "Export statistics"

[node name="ToolsDirChooser" type="FileDialog" parent="."]
title = "Open a Directory"
size = Vector2i(312, 157)
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2
script = ExtResource("3_vr4cd")

[node name="WorkingDirChooser" type="FileDialog" parent="."]
title = "Open a Directory"
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2
script = ExtResource("1_qxvmc")

[node name="BuildDirChooser" type="FileDialog" parent="."]
title = "Open a Directory"
size = Vector2i(312, 157)
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2
script = ExtResource("2_fywm8")

[node name="AddiDirChooser" type="FileDialog" parent="."]
title = "Open a Directory"
size = Vector2i(312, 157)
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2
script = ExtResource("4_d742l")

[connection signal="about_to_popup" from="." to="VBoxContainer/GridContainer/WorkingDirText" method="_on_options_about_to_popup"]
[connection signal="about_to_popup" from="." to="VBoxContainer/GridContainer/BuildDirText" method="_on_options_about_to_popup"]
[connection signal="about_to_popup" from="." to="VBoxContainer/GridContainer/ToolsDirText" method="_on_options_about_to_popup"]
[connection signal="about_to_popup" from="." to="VBoxContainer/GridContainer/AddiDirText" method="_on_options_about_to_popup"]
[connection signal="confirmed" from="." to="." method="_on_options_confirmed"]
[connection signal="text_changed" from="VBoxContainer/GridContainer/WorkingDirText" to="VBoxContainer/RichTextLabel" method="_on_working_dir_text_text_changed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/WorkingDirChoose" to="WorkingDirChooser" method="_on_working_dir_choose_pressed"]
[connection signal="text_changed" from="VBoxContainer/GridContainer/BuildDirText" to="VBoxContainer/RichTextLabel" method="_on_build_dir_text_text_changed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/BuildDirChoose" to="BuildDirChooser" method="_on_build_dir_choose_pressed"]
[connection signal="text_changed" from="VBoxContainer/GridContainer/ToolsDirText" to="VBoxContainer/RichTextLabel" method="_on_tools_dir_text_text_changed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/ToolsDirChoose" to="ToolsDirChooser" method="_on_tools_dir_choose_pressed"]
[connection signal="text_changed" from="VBoxContainer/GridContainer/AddiDirText" to="VBoxContainer/RichTextLabel" method="_on_addi_dir_text_text_changed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/AddiDirChoose" to="AddiDirChooser" method="_on_addi_dir_choose_pressed"]
[connection signal="dir_selected" from="ToolsDirChooser" to="VBoxContainer/GridContainer/ToolsDirText" method="_on_tools_dir_chooser_dir_selected"]
[connection signal="dir_selected" from="WorkingDirChooser" to="VBoxContainer/GridContainer/WorkingDirText" method="_on_working_dir_chooser_dir_selected"]
[connection signal="dir_selected" from="BuildDirChooser" to="VBoxContainer/GridContainer/BuildDirText" method="_on_build_dir_chooser_dir_selected"]
[connection signal="dir_selected" from="AddiDirChooser" to="VBoxContainer/GridContainer/AddiDirText" method="_on_addi_dir_chooser_dir_selected"]
